<resources>
    <string name="app_name">OhMyChat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="signup">Create Account</string>
    <string name="display_name">Display User Name</string>
    <string name="message">Message...</string>
    <string name="add_friend">Add friend</string>
    <string name="need_account">Need an account?</string>
    <string name="find_friend">Find friends</string>
    <string name="create_group">Create a group chat</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="old_password">Old password...</string>
    <string name="new_password">New password...</string>
    <string name="update">Update</string>
<<<<<<< HEAD
    <string name="change_password">Change password</string>
    <string name="username">Display name</string>
    <string name="default_status">Hey, I\'m available now.</string>
    <string name="cancel_invite">Cancel invite</string>
    <string name="wanna_connect">want to connect with you.</string>
    <string name="req_sent">Request sent</string>
    <string name="sent_req_to">"You have sent request to "</string>
    <string name="enter_group_name">Enter Group Name:</string>
    <string name="account_settings">Account settings</string>
    <string name="set_profile_image">Set profile image</string>
    <string name="please_wait">Please wait ...</string>
    <string name="logging_in">Signing in</string>
    <string name="chats">Chats</string>
=======
    <string name="forgot_password">Forgot password?</string>
>>>>>>> 5b90ba3bed49c74ed0bdab5d7284b1e4c849e3cb
</resources>
